# portals

./: CLAUDE.md  Cargo.toml  DESIGN.md  README.md  TODO.md  flake.nix
crates/backends/mock/portals-clocks-mock/: Cargo.toml
crates/backends/mock/portals-http-mock/: Cargo.toml
crates/backends/mock/portals-http-mock/src/: lib.rs
crates/backends/mock/portals-random-mock/: Cargo.toml
crates/backends/native/pith-clocks-native/: Cargo.toml
crates/backends/native/pith-clocks-native/src/: lib.rs
crates/backends/native/pith-config-native/: Cargo.toml
crates/backends/native/pith-cron-native/: Cargo.toml
crates/backends/native/pith-crypto-native/: Cargo.toml
crates/backends/native/pith-encoding-native/: Cargo.toml
crates/backends/native/pith-messaging-native/: Cargo.toml
crates/backends/native/pith-messaging-native/src/: lib.rs
crates/backends/native/pith-nanoid-native/: Cargo.toml
crates/backends/native/pith-observe-native/: Cargo.toml
crates/backends/native/pith-random-native/: Cargo.toml
crates/backends/native/pith-sql-native/: Cargo.toml
crates/backends/native/portals-blobstore-native/: Cargo.toml
crates/backends/native/portals-cache-native/: Cargo.toml
crates/backends/native/portals-clocks-native/: Cargo.toml
crates/backends/native/portals-config-native/: Cargo.toml
crates/backends/native/portals-crypto-native/: Cargo.toml
crates/backends/native/portals-dns-native/: Cargo.toml
crates/backends/native/portals-dns-native/src/: lib.rs
crates/backends/native/portals-filesystem-native/: Cargo.toml
crates/backends/native/portals-filesystem-native/src/: lib.rs
crates/backends/native/portals-http-native/: Cargo.toml
crates/backends/native/portals-http-native/src/: lib.rs
crates/backends/native/portals-io-native/: Cargo.toml
crates/backends/native/portals-io-native/src/: lib.rs
crates/backends/native/portals-keyvalue-native/: Cargo.toml
crates/backends/native/portals-keyvalue-native/src/: lib.rs
crates/backends/native/portals-logging-native/: Cargo.toml
crates/backends/native/portals-markdown-native/: Cargo.toml
crates/backends/native/portals-messaging-native/: Cargo.toml
crates/backends/native/portals-nanoid-native/: Cargo.toml
crates/backends/native/portals-observe-native/: Cargo.toml
crates/backends/native/portals-random-native/: Cargo.toml
crates/backends/native/portals-random-native/src/: lib.rs
crates/backends/native/portals-snowflake-native/: Cargo.toml
crates/backends/native/portals-sockets-native/: Cargo.toml
crates/backends/native/portals-sockets-native/src/: lib.rs
crates/backends/native/portals-sql-native/: Cargo.toml
crates/backends/native/portals-sql-native/src/: lib.rs
crates/backends/native/portals-websocket-native/: Cargo.toml
crates/backends/portable/portals-cron/: Cargo.toml
crates/backends/portable/portals-encoding/: Cargo.toml
crates/backends/portable/portals-encoding/src/: lib.rs
crates/backends/wasm/portals-clocks-wasm/: Cargo.toml
crates/backends/wasm/portals-clocks-wasm/src/: lib.rs
crates/backends/wasm/portals-http-wasm/: Cargo.toml
crates/backends/wasm/portals-logging-wasm/: Cargo.toml
crates/backends/wasm/portals-logging-wasm/src/: lib.rs
crates/backends/wasm/portals-random-wasm/: Cargo.toml
crates/backends/wasm/portals-websocket-wasm/: Cargo.toml
crates/interfaces/pith-blobstore/: Cargo.toml
crates/interfaces/pith-blobstore/src/: lib.rs
crates/interfaces/pith-cli/: Cargo.toml
crates/interfaces/pith-clocks/: Cargo.toml
crates/interfaces/pith-config/: Cargo.toml
crates/interfaces/pith-config/src/: lib.rs
crates/interfaces/pith-cron/: Cargo.toml
crates/interfaces/pith-crypto/: Cargo.toml
crates/interfaces/pith-crypto/src/: lib.rs
crates/interfaces/pith-dns/: Cargo.toml
crates/interfaces/pith-encoding/: Cargo.toml
crates/interfaces/pith-encoding/src/: lib.rs
crates/interfaces/pith-filesystem/: Cargo.toml
crates/interfaces/pith-filesystem/src/: lib.rs
crates/interfaces/pith-http/: Cargo.toml
crates/interfaces/pith-http/src/: lib.rs
crates/interfaces/pith-io/: Cargo.toml
crates/interfaces/pith-io/src/: lib.rs
crates/interfaces/pith-keyvalue/: Cargo.toml
crates/interfaces/pith-messaging/: Cargo.toml
crates/interfaces/pith-nanoid/: Cargo.toml
crates/interfaces/pith-observe/: Cargo.toml
crates/interfaces/pith-random/: Cargo.toml
crates/interfaces/pith-sockets/: Cargo.toml
crates/interfaces/pith-sql/: Cargo.toml
crates/interfaces/pith-timezone/: Cargo.toml
crates/interfaces/pith-url/: Cargo.toml
crates/interfaces/pith-websocket/: Cargo.toml
crates/interfaces/portals-blobstore/: Cargo.toml
crates/interfaces/portals-cache/: Cargo.toml
crates/interfaces/portals-clocks/: Cargo.toml
crates/interfaces/portals-config/: Cargo.toml
crates/interfaces/portals-cron/: Cargo.toml
crates/interfaces/portals-crypto/: Cargo.toml
crates/interfaces/portals-dns/: Cargo.toml
crates/interfaces/portals-encoding/: Cargo.toml
crates/interfaces/portals-filesystem/: Cargo.toml
crates/interfaces/portals-http/: Cargo.toml
crates/interfaces/portals-io/: Cargo.toml
crates/interfaces/portals-keyvalue/: Cargo.toml
crates/interfaces/portals-logging/: Cargo.toml
crates/interfaces/portals-markdown/: Cargo.toml
crates/interfaces/portals-messaging/: Cargo.toml
crates/interfaces/portals-nanoid/: Cargo.toml
crates/interfaces/portals-observe/: Cargo.toml
crates/interfaces/portals-random/: Cargo.toml
crates/interfaces/portals-snowflake/: Cargo.toml
crates/interfaces/portals-sockets/: Cargo.toml
crates/interfaces/portals-sql/: Cargo.toml
crates/interfaces/portals-timezone/: Cargo.toml
crates/interfaces/portals-websocket/: Cargo.toml
crates/pith-cli/src/: lib.rs
crates/pith-filesystem/: Cargo.toml
crates/pith-random/src/: lib.rs
crates/pith-sockets/src/: lib.rs
crates/pith/src/: lib.rs
crates/portals/: Cargo.toml  README.md
crates/portals/src/: lib.rs
crates/protocols/portals-http1/: Cargo.toml
docs/: RECOMMENDATIONS.md  package.json
docs/adr/: 0001-random-mutability.md  0002-async-runtime.md
(+32 files in other folders)
