[workspace]
resolver = "2"
members = [
    "crates/interfaces/pith-clocks",
    "crates/interfaces/pith-cli",
    "crates/interfaces/pith-filesystem",
    "crates/interfaces/pith-http",
    "crates/interfaces/pith-io",
    "crates/interfaces/pith-random",
    "crates/interfaces/pith-sockets",
    # Backends
    "crates/backends/native/pith-random-native",
    "crates/backends/native/pith-clocks-native",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhizome-lab/pith"

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1", features = ["time", "rt", "macros"] }
getrandom = "0.3"
