[package]
name = "rhi-portals-http-mock"
description = "Mock implementation of pith-http for testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhi-portals-http = { path = "../../../interfaces/portals-http" }

[dev-dependencies]
tokio = { workspace = true }
