[package]
name = "rhi-portals-dns-native"
description = "Native DNS implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhi-portals-dns = { path = "../../../interfaces/portals-dns" }
hickory-resolver = "0.25"
tokio.workspace = true
