[package]
name = "rhi-portals-filesystem-native"
description = "Native implementation of pith-filesystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhi-portals-filesystem = { path = "../../../interfaces/portals-filesystem" }
rhi-portals-io-native = { path = "../portals-io-native" }
