[package]
name = "rhi-portals-io-native"
description = "Native implementation of pith-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
rhi-portals-io = { path = "../../../interfaces/portals-io" }
tokio = { workspace = true, features = ["io-util"], optional = true }
