[package]
name = "rhi-portals-keyvalue-native"
description = "Native key-value store implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhi-portals-keyvalue = { path = "../../../interfaces/portals-keyvalue" }
tokio.workspace = true
