[package]
name = "rhi-portals-random-native"
description = "Native implementation of portals-random"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhi-portals-random = { path = "../../../interfaces/portals-random" }
getrandom.workspace = true
