[package]
name = "rhi-portals-sockets-native"
description = "Native implementation of pith-sockets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhi-portals-sockets = { path = "../../../interfaces/portals-sockets" }
tokio = { workspace = true, features = ["net"] }
