[package]
name = "rhi-portals-sql-native"
description = "Native implementation of portals-sql using libsql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhi-portals-sql = { path = "../../../interfaces/portals-sql" }
libsql.workspace = true
tokio = { workspace = true }
