[package]
name = "rhi-portals-encoding-portable"
description = "Portable implementation of pith-encoding (works on native and WASM)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhi-portals-encoding = { path = "../../../interfaces/portals-encoding" }
base64 = "0.22"
