[package]
name = "rhi-portals-logging-wasm"
description = "WASM implementation of pith-logging"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rhi-portals-logging = { path = "../../../interfaces/portals-logging" }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
